--- a/index.html
+++ b/index.html
@@ -133,6 +133,10 @@
           <img src="assets/designquiz.png" alt="Description" />
         </a>
 
+        <a href="https://luciemrc.github.io/teamAtelier_runner/" class="card stack-item" id="runner">
+          <img src="assets/runner.png" alt="Description" />
+        </a>
+
         <a href="https://luciemrc.github.io/Quizz_interior_design/" class="card stack-item" id="interiorquiz">
           <img src="assets/interiorquiz.png" alt="Description" />
         </a>
