--- a/index.html
+++ b/index.html
@@ -161,6 +161,10 @@
           <img src="assets/avent.png" alt="Description" />
         </a>
 
+        <a href="https://www.valentindupas.com/projects/rabbit/#" class="card stack-item" id="rabbit">
+          <img src="assets/rabbit.png" alt="Description" />
+        </a>
+
         <a href="https://b2renger.github.io/Video2FlipBook/" class="card stack-item" id="flipbook">
           <img src="assets/flipbook.png" alt="Description" />
         </a>
